--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,8 @@ Suggests:
     rmarkdown (>= 1.8),
     testthat (>= 2.0.0),
     httptest
+Remotes:
+    nealrichardson/httptest
 VignetteBuilder: knitr
 Encoding: UTF-8
 LazyData: true
